Version 0.2
  API CHANGE: You will now need to load the jqsc-inlineExtend.js plugin
              if you wish to use the .inlinExtend method on classes
- Added support for jQsimple-class plugins
- Split the .inlineExtend method into a plugin
- Simplified the inheritance resolution method
- Added a check for attempts to run classes as functions
	(ie. attempt to instantiate as 'class()' not 'new class()')
- Various cleanup
- Testsuite now run with other libs (ie. mootools) loaded
- Fixed invalid behaviour that removed constructors and destructors
	from virtual classes, in contradiction with the documentation.
	Constructors and destructors now get inherited and run properly.

Version 0.1.1
- Removed unused components from the standalone version
- Added support for using jQsimple-class in server-side code that
	uses commonjs (ie. in nodejs applications)

Version 0.1
- Initial release